[package]
name = "num-parse"
version = "0.1.0"
edition = "2021"
description = "Generic, JavaScript-like parseInt() functions for Rust."
authors = [
    "Jan Max Meyer <jmm@phorward.de>"
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
