[package]
name = "num-parse"
version = "0.1.1"
edition = "2021"
description = "Generic, JavaScript-like parseInt() functions for Rust."
authors = [
    "Jan Max Meyer <jmm@phorward.de>"
]
license = "MIT"
repository = "https://github.com/phorward/num-parse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
