[package]
name = "num-parse"
version = "0.2"
edition = "2021"
description = "parseInt() and parseFloat() as known from JavaScript, but generic, and in Rust"
authors = [
    "Jan Max Meyer <jmm@phorward.de>"
]
license = "MIT"
repository = "https://github.com/phorward/num-parse"
categories = [
    "parsing"
]
keywords = [
    "parseint",
    "parsefloat",
    "javascript",
    "ecmascript",
    "numbers"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
